Add content and fix typo for notes Ignore more kinds of latex intermediate files

--- a/notes/exact_solution.tex
+++ b/notes/exact_solution.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{ctex}
+\usepackage[colorlinks=true, unicode=true, linkcolor=red, citecolor=red, filecolor=red, urlcolor=red]{hyperref}
 \usepackage{geometry}
 \geometry{left=25.4mm, right=25.4mm, top=31.8mm, bottom=31.8mm}
 \usepackage{graphicx}
